--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,6 +61,25 @@ body {
   padding: 5px 10px;
   background-color: lightseagreen;
 }
+.update-button {
+  position: absolute;
+  top: 75px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: rgb(180, 143, 218);
+}
+.delete-button {
+  position: absolute;
+  top: 125px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: hotpink;
+}
+.update-button a {
+  color:lightgray;
+}
 .save-button:hover {
   background-color: green;
   color: white;
